deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adquirente
  labels:
    # Pod Security Standards: nenhum pod privilegiado neste namespace
    pod-security.kubernetes.io/enforce: restricted
